--- a/MultiSelectTreeView/MultiSelectTreeView.csproj
+++ b/MultiSelectTreeView/MultiSelectTreeView.csproj
@@ -1,5 +1,5 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
-<Project ToolsVersion="4.0" DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
+<Project ToolsVersion="12.0" DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">x86</Platform>
@@ -10,8 +10,9 @@
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>System.Windows</RootNamespace>
     <AssemblyName>MultiSelectTreeView</AssemblyName>
-    <TargetFrameworkVersion>v4.0</TargetFrameworkVersion>
-    <TargetFrameworkProfile>Client</TargetFrameworkProfile>
+    <TargetFrameworkVersion>v4.8</TargetFrameworkVersion>
+    <TargetFrameworkProfile>
+    </TargetFrameworkProfile>
     <FileAlignment>512</FileAlignment>
     <ProjectTypeGuids>{60dc8134-eba5-43b8-bcc9-bb4bc16c2548};{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}</ProjectTypeGuids>
     <WarningLevel>4</WarningLevel>
@@ -36,6 +37,7 @@
     <ErrorReport>prompt</ErrorReport>
     <CodeAnalysisIgnoreBuiltInRuleSets>true</CodeAnalysisIgnoreBuiltInRuleSets>
     <CodeAnalysisIgnoreBuiltInRules>true</CodeAnalysisIgnoreBuiltInRules>
+    <Prefer32Bit>false</Prefer32Bit>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'Release|AnyCPU'">
     <OutputPath>bin\Release\</OutputPath>
@@ -46,6 +48,7 @@
     <ErrorReport>prompt</ErrorReport>
     <CodeAnalysisIgnoreBuiltInRules>false</CodeAnalysisIgnoreBuiltInRules>
     <CodeAnalysisFailOnMissingRules>false</CodeAnalysisFailOnMissingRules>
+    <Prefer32Bit>false</Prefer32Bit>
   </PropertyGroup>
   <PropertyGroup>
     <ApplicationIcon>MultiSelectTreeView.ico</ApplicationIcon>
@@ -64,15 +67,8 @@
     <Compile Include="Automation\Peers\MultiSelectTreeViewAutomationPeer.cs" />
     <Compile Include="Automation\Peers\MultiSelectTreeViewItemAutomationPeer.cs" />
     <Compile Include="Automation\Peers\MultiSelectTreeViewItemDataAutomationPeer.cs" />
-    <Compile Include="Controls\BorderSelectionLogic.cs" />
-    <Compile Include="Controls\EditTextBox.cs" />
-    <Compile Include="Controls\ISelectionStrategy.cs" />
-    <Compile Include="Controls\ListExtensions.cs" />
-    <Compile Include="Controls\FocusHelper.cs" />
-    <Compile Include="Controls\SelectionMultiple.cs" />
-    <Compile Include="Controls\SelectionSingle.cs" />
-    <Compile Include="Controls\MultiSelectTreeViewItem.cs" />
-    <Compile Include="Controls\MultiSelectTreeView.cs" />
+    <Compile Include="Utils\ReferenceDictionary.cs" />
+    <Compile Include="Utils\ReferenceSet.cs" />
     <Page Include="Themes\Aero.NormalColor.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
@@ -139,6 +135,16 @@
     </Page>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="BoolBox.cs" />
+    <Compile Include="Controls\BorderSelectionLogic.cs" />
+    <Compile Include="Controls\EditTextBox.cs" />
+    <Compile Include="Controls\FocusHelper.cs" />
+    <Compile Include="Controls\ISelectionStrategy.cs" />
+    <Compile Include="Controls\ListUtils.cs" />
+    <Compile Include="Controls\MultiSelectTreeView.cs" />
+    <Compile Include="Controls\MultiSelectTreeViewItem.cs" />
+    <Compile Include="Controls\SelectionMultiple.cs" />
+    <Compile Include="Controls\SelectionSingle.cs" />
     <Compile Include="Controls\ThicknessLeftConverter.cs" />
     <Compile Include="Properties\AssemblyInfo.cs">
       <SubType>Code</SubType>
@@ -155,7 +161,6 @@
     <AppDesigner Include="Properties\" />
     <None Include="NuGet\MultiSelectTreeView.nuspec" />
   </ItemGroup>
-  <ItemGroup />
   <ItemGroup>
     <Resource Include="MultiSelectTreeView.ico" />
   </ItemGroup>
