--- a/MultiSelectTreeView/MultiSelectTreeView.csproj
+++ b/MultiSelectTreeView/MultiSelectTreeView.csproj
@@ -11,6 +11,7 @@
     <RootNamespace>System.Windows</RootNamespace>
     <AssemblyName>MultiSelectTreeView</AssemblyName>
     <TargetFrameworkVersion>v4.8</TargetFrameworkVersion>
+	<TargetFramework>netstandard2.0</TargetFramework>
     <TargetFrameworkProfile>
     </TargetFrameworkProfile>
     <FileAlignment>512</FileAlignment>
